--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>ד״ר בנימין ריינשטיין | מרפאת שיניים בירושלים</title>
-<meta name="description" content="זקוקים לרופא שיניים בירושלים? ד״ר בנימין ריינשטיין מציע טיפולי שיניים מתקדמים, השתלות וטיפולי חירום דנטליים.">
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -53,7 +52,7 @@ header::after { content: ""; position: absolute; inset: 0; background: rgba(0,0,
 <body>
 <div class="topbar">
   <div class="lang-dropdown">
-    <button class="lang-btn" onclick="toggleMenu()">HE ▾</button>
+    <button class="lang-btn" onclick="toggleMenu()">עב ▾</button>
     <div class="lang-menu" id="lang-menu">
       <button onclick="changeLang('/en/')">English</button>
       <button onclick="changeLang('/')">עברית</button>
@@ -110,33 +109,53 @@ header::after { content: ""; position: absolute; inset: 0; background: rgba(0,0,
     <p><b>טלפון:</b> 053-385-2030</p>
     <p><b>אימייל:</b> BenjaminReinstein@gmail.com</p>
     <h2>מיקום</h2>
-    <iframe width="100%" height="350" style="border:0;border-radius:14px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3392.208152431792!2d35.20915337532321!3d31.76483497410398!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1502d7d91986427d%3A0xc669a47317765664!2sKeren%20HaYesod%20St%2019%2C%20Jerusalem!5e0!3m2!1sen!2sil!4v1700000000000" loading="lazy"></iframe>
+    <iframe width="100%" height="350" style="border:0;border-radius:14px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3392.345842139162!2d35.215563!3d31.768319!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzHCsDQ2JzA2LjAiTiAzNcKwMTInNTYuMCJF!5e0!3m2!1sen!2sil!4v1700000000000!5m2!1sen!2sil" loading="lazy"></iframe>
   </div>
 </main>
 <footer style="background:#111;color:white;text-align:center;padding:25px; margin-top: 40px;">© 2025 ד״ר בנימין ריינשטיין</footer>
 <a href="https://wa.me/972533852030?text=שלום, אשמח לקבוע תור בבקשה." class="whatsapp-float" target="_blank" onclick="trackWhatsApp()"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp"></a>
+
 <script>
+const tabMap = { 'about': 'about-tab', 'services': 'services-tab', 'emergency': 'emergencies-tab' };
+const reverseMap = { 'about-tab': 'about', 'services-tab': 'services', 'emergencies-tab': 'emergency' };
 let currentTabId = 'about-tab';
-function openTab(evt, tabId) {
+
+function openTab(evt, tabId, updateURL = true) {
   currentTabId = tabId;
+  if (updateURL) {
+    const cleanName = reverseMap[tabId];
+    history.pushState(null, null, '#' + cleanName);
+  }
   document.querySelectorAll(".tab-content").forEach(c => c.classList.remove("active"));
   document.querySelectorAll(".tab-link").forEach(l => l.classList.remove("active"));
   document.getElementById(tabId).classList.add("active");
   if(evt) evt.currentTarget.classList.add("active");
-  else document.getElementById('btn-' + tabId).classList.add("active");
+  else {
+    const btn = document.getElementById('btn-' + tabId);
+    if(btn) btn.classList.add("active");
+  }
 }
+
 function toggleMenu() {
   const m = document.getElementById("lang-menu");
   m.style.display = (m.style.display === "block") ? "none" : "block";
 }
+
 function changeLang(url) {
-  window.location.href = url + "?tab=" + currentTabId;
+  const cleanName = reverseMap[currentTabId];
+  window.location.href = url + '#' + cleanName;
 }
+
 window.onload = function() {
-  const params = new URLSearchParams(window.location.search);
-  const tab = params.get('tab');
-  if (tab) openTab(null, tab);
+  const hash = window.location.hash.replace('#', '');
+  if (hash && tabMap[hash]) openTab(null, tabMap[hash], false);
 };
+
+window.onpopstate = function() {
+  const hash = window.location.hash.replace('#', '');
+  if (hash && tabMap[hash]) openTab(null, tabMap[hash], false);
+};
+
 document.addEventListener("click", e => { if (!e.target.closest(".lang-dropdown")) document.getElementById("lang-menu").style.display = "none"; });
 </script>
 </body>
