--- a/index.html
+++ b/index.html
@@ -105,21 +105,26 @@ header::after { content: ""; position: absolute; inset: 0; background: rgba(0,0,
   <section id="reviews-tab" class="tab-content">
     <div class="rating-header">
       <h2>מטופלים ממליצים</h2>
-      <div class="stars">★★★★★</div>
-      <p><b>דירוג כללי: 5.0 בגוגל</b></p>
+      <div class="stars" style="color: #fbbc04; font-size: 1.5rem; display: inline-block; direction: ltr;">
+      <span style="color: #fbbc04;">★★★★</span><span style="position: relative; display: inline-block;">
+      <span style="color: #ccc;">★</span>
+      <span style="position: absolute; top: 0; left: 0; width: 90%; overflow: hidden; color: #fbbc04;">★</span>
+      </span>
+      </div>
+      <p><b>דירוג כללי: 4.9 בגוגל</b></p>
     </div>
     
     <div class="review-card">
-      <span class="review-name">Yakir Ohayon</span>
-      <p>"רופא מעולה, מקצועי ואדיב מאוד. קיבלתי טיפול ברמה הגבוהה ביותר, יחס אישי ומסביר פנים. ממליץ בחום!"</p>
+      <span class="review-name">יהודה א.</span>
+      <p>"מהרגע הראשון קיבלתי יחס אישי חם ואדיב מד"ר בנימין ריינשטיין. טיפול מקצועי עם שימת לב לכל פרט לתחושת המטופל. ההרגשה שאתה בידיים טובות ובטוחות. זה נותן ביטחון לכל טראומה טיפולית מרופאים אחרים בעבר."</p>
     </div>
     <div class="review-card">
-      <span class="review-name">Shani Levy</span>
-      <p>"הגעתי עם פחד גדול מרופאי שיניים ובנימין הרגיע אותי מהרגע הראשון. עדין מאוד ומקצועי ביותר. חוויה מתקנת!"</p>
+      <span class="review-name">דניאל ב.</span>
+      <p>"ד"ר בנימין היה נהדר! מקצועי, ישר והסברים סופר ברורים. הבדיקה הייתה יסודית והרגשתי בנוח לאורך כל הזמן. חוויה ממש טובה בסך הכל, ממליץ בהחלט!"</p>
     </div>
     <div class="review-card">
-      <span class="review-name">David G.</span>
-      <p>"המרפאה נקייה ונעימה, הציוד חדיש והטיפול היה פשוט מושלם. תודה רבה ד"ר ריינשטיין."</p>
+      <span class="review-name">שיר ת.</span>
+      <p>"הייתה לי חוויה מצוינת. ד״ר ריינשטיין קיבל אותי באותו יום שפניתי אליו לאחר שהסברתי את כאבי. מהרגע שהגעתי הוא היה אדיב וסבלני והסביר לי בפירוט את המצב, את האפשרויות העומדות בפני ואת הסיכונים הפוטנציאליים. בזכות העקירה המקצועית שהוא ביצע, הכאבים בימים העוקבים היו מינימליים לחלוטין. ד״ר ריינשטיין גם ווידא שאני אכן מרגישה טוב בימים העוקבים ואציע מעקב במרפאה אם אצטרך. מומלץ מאוד!"</p>
     </div>
 
     <center>
