--- a/index.html
+++ b/index.html
@@ -105,10 +105,12 @@ header::after { content: ""; position: absolute; inset: 0; background: rgba(0,0,
   <section id="reviews-tab" class="tab-content">
     <div class="rating-header">
       <h2>מטופלים ממליצים</h2>
-      <div class="stars" style="color: #fbbc04; font-size: 1.5rem; display: inline-block; direction: ltr;">
-      <span style="color: #fbbc04;">★★★★</span><span style="position: relative; display: inline-block;">
-      <span style="color: #ccc;">★</span>
-      <span style="position: absolute; top: 0; left: 0; width: 90%; overflow: hidden; color: #fbbc04;">★</span>
+
+    <div class="stars-container" style="display: inline-flex; direction: ltr; font-size: 1.5rem; line-height: 1;">
+      <span style="color: #fbbc04;">★★★★</span>
+      <span style="position: relative; display: inline-block; color: #ccc;">
+        ★
+      <span style="position: absolute; top: 0; left: 0; width: 90%; overflow: hidden; color: #fbbc04; white-space: nowrap;">★</span>
       </span>
       </div>
       <p><b>דירוג כללי: 4.9 בגוגל</b></p>
