--- a/index.html
+++ b/index.html
@@ -105,16 +105,7 @@ header::after { content: ""; position: absolute; inset: 0; background: rgba(0,0,
   <section id="reviews-tab" class="tab-content">
     <div class="rating-header">
       <h2>מטופלים ממליצים</h2>
-      <div class="stars" style="
-      font-size: 24px; 
-      display: inline-block; 
-      background: linear-gradient(90deg, #fbbc04 90%, #ccc 90%); 
-      -webkit-background-clip: text; 
-      -webkit-text-fill-color: transparent; 
-      letter-spacing: 2px;
-      font-family: Arial, sans-serif;">
-      ★★★★★
-      </div>
+      <div class="stars">★★★★★</div>
       <p><b>דירוג כללי: 4.9 בגוגל</b></p>
     </div>
     
