--- a/en/index.html
+++ b/en/index.html
@@ -106,20 +106,20 @@ header::after { content: ""; position: absolute; inset: 0; background: rgba(0,0,
     <div class="rating-header">
       <h2>Patient Reviews</h2>
       <div class="stars">★★★★★</div>
-      <p><b>Overall Rating: 5.0 on Google</b></p>
+      <p><b>Overall Rating: 4.9 on Google</b></p>
     </div>
     
     <div class="review-card">
-      <span class="review-name">Yakir Ohayon</span>
-      <p>"Excellent dentist, professional and very kind. I received the highest level of treatment, personal and welcoming attitude. Highly recommend!"</p>
+      <span class="review-name">Yehuda E.</span>
+      <p>"From the very first moment, I received warm and kind personal attention from Dr. Benjamin Reinstein. The treatment was professional, with attention to every detail and to the patient's comfort. It’s the feeling that you are in good, safe hands. It truly provides confidence and heals the trauma of dental treatments from other doctors in the past."</p>
     </div>
     <div class="review-card">
-      <span class="review-name">Shani Levy</span>
-      <p>"I arrived with a great fear of dentists and Benjamin calmed me down from the first moment. Very gentle and highly professional. A corrective experience!"</p>
+      <span class="review-name">Daniel B.</span>
+      <p>"Dr. Benjamin was great! professional, honest, and super clear with explanations. The checkup was thorough and I felt comfortable the whole time. Really good experience overall, definitely recommend 👍"</p>
     </div>
     <div class="review-card">
-      <span class="review-name">David G.</span>
-      <p>"The clinic is clean and pleasant, the equipment is modern and the treatment was simply perfect. Thank you very much Dr. Reinstein."</p>
+      <span class="review-name">Shir T.</span>
+      <p>"I had an excellent experience. Dr. Reinstein saw me the same day I reached out after I explained my pain. From the moment I arrived, he was kind and patient, explaining the situation, my options, and the potential risks in detail. Thanks to the professional extraction he performed, the pain in the following days was absolutely minimal. Dr. Reinstein also followed up to ensure I was feeling well and offered a follow-up appointment if needed. Highly recommended!"</p>
     </div>
 
     <center>
