--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ header::after { content: ""; position: absolute; inset: 0; background: rgba(0,0,
     </div>
     <div class="review-card">
       <span class="review-name">דניאל ב.</span>
-      <p>"ד"ר בנימין היה נהדר! מקצועי, ישר והסברים סופר ברורים. הבדיקה הייתה יסודית והרגשתי בנוח לאורך כל הזמן. חוויה ממש טובה בסך הכל, ממליץ בהחלט!"</p>
+      <p>"ד"ר בנימין היה נהדר! מקצועי, ישר והסברים סופר ברורים. הבדיקה הייתה יסודית והרגשתי בנוח לאורך כל הזמן. חוויה ממש טובה בסך הכל, ממליץ בהחלט 👍"</p>
     </div>
     <div class="review-card">
       <span class="review-name">שיר ת.</span>
