--- a/fr/index.html
+++ b/fr/index.html
@@ -106,20 +106,20 @@ header::after { content: ""; position: absolute; inset: 0; background: rgba(0,0,
     <div class="rating-header">
       <h2>Témoignages de Patients</h2>
       <div class="stars">★★★★★</div>
-      <p><b>Note globale : 5.0 sur Google</b></p>
+      <p><b>Note globale : 4.9 sur Google</b></p>
     </div>
     
     <div class="review-card">
-      <span class="review-name">Yakir Ohayon</span>
-      <p>"Excellent dentiste, professionnel et très aimable. J'ai reçu le plus haut niveau de traitement, une attitude personnelle et accueillante. Je recommande vivement !"</p>
+      <span class="review-name">Yehuda E.</span>
+      <p>"Dès le premier instant, j'ai reçu un accueil personnel, chaleureux et attentionné de la part du Dr Benjamin Reinstein. Un traitement professionnel avec une attention portée à chaque détail et au bien-être du patient. On sent que l'on est entre de bonnes mains, en toute sécurité. Cela redonne confiance et permet de surmonter les traumatismes liés aux soins dentaires subis chez d'autres dentistes par le passé."</p>
     </div>
     <div class="review-card">
-      <span class="review-name">Shani Levy</span>
-      <p>"Je suis arrivée avec une grande peur des dentistes et Benjamin m'a calmée dès le premier instant. Très doux et hautement professionnel. Une expérience correctrice !"</p>
+      <span class="review-name">Daniel B.</span>
+      <p>"Le Dr Benjamin était super! Professionnel, honnête et très clair dans ses explications. L'examen était approfondi et je me suis senti à l'aise tout au long du rendez-vous. Une excellente expérience globale, je recommande vivement👍"</p>
     </div>
     <div class="review-card">
-      <span class="review-name">David G.</span>
-      <p>"La clinique est propre et agréable, l'équipement est moderne et le traitement était tout simplement parfait. Merci beaucoup Dr Reinstein."</p>
+      <span class="review-name">Shir T.</span>
+      <p>""J'ai eu une excellente expérience. Le Dr Reinstein m'a reçu le jour même de mon appel après que j'ai expliqué ma douleur. Dès mon arrivée, il s'est montré aimable et patient, m'expliquant en détail la situation, les options possibles et les risques potentiels. Grâce à l'extraction professionnelle qu'il a réalisée, la douleur les jours suivants a été absolument minimale. Le Dr Reinstein s'est également assuré que je me sentais bien les jours suivants et m'a proposé un suivi à la clinique si nécessaire. Fortement recommandé!."</p>
     </div>
 
     <center>
