--- a/en/index.html
+++ b/en/index.html
@@ -12,6 +12,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Dr. Benjamin Reinstein | Jerusalem Dental Clinic</title>
+<meta name="description" content="Our Jerusalem-based clinic specializes in conservative dental treatments including fillings, root canals, and extractions, as well as restorative care with crowns, implants, and emergency treatments in a calm and professional atmosphere.">
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
