--- a/fr/index.html
+++ b/fr/index.html
@@ -12,6 +12,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Dr. Benjamin Reinstein | Clinique Dentaire Jérusalem</title>
+<meta name="description" content="Notre clinique à Jérusalem est spécialisée dans les soins dentaires conservateurs (obturations, dévitalisations, extractions), les soins prothétiques (couronnes, implants) et les urgences dentaires dans une ambiance calme et professionnelle.">
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
