--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>ד״ר בנימין ריינשטיין | מרפאת שיניים בירושלים</title>
 <meta name="description" content="מרפאתנו הנמצאת בירושלים מתמחה בטיפולי שיניים משמרים הכולל סתימות, טיפולי שורש ועקירות, טיפולי משקמים הכולל כתרים ושתלים וטיפולי חירום באווירה רגועה ומקצועית.">
+<link rel="alternate" hreflang="en" href="https://www.dentalclinic.co.il/en/" />
+<link rel="alternate" hreflang="fr" href="https://www.dentalclinic.co.il/fr/" />
+<link rel="alternate" hreflang="x-default" href="https://www.dentalclinic.co.il/" />
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
