--- a/en/index.html
+++ b/en/index.html
@@ -13,6 +13,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Dr. Benjamin Reinstein | Jerusalem Dental Clinic</title>
 <meta name="description" content="Our Jerusalem-based clinic specializes in conservative dental treatments including fillings, root canals, and extractions, as well as restorative care with crowns, implants, and emergency treatments in a calm and professional atmosphere.">
+<link rel="alternate" hreflang="he" href="https://www.dentalclinic.co.il/" />
+<link rel="alternate" hreflang="en" href="https://www.dentalclinic.co.il/en/" />
+<link rel="alternate" hreflang="fr" href="https://www.dentalclinic.co.il/fr/" />
+<link rel="alternate" hreflang="x-default" href="https://www.dentalclinic.co.il/" />
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
